# ansible-docker-ci

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml  tox.yml
src/ansible_docker_ci/image/connection/: plugin.py
src/ansible_docker_image_connection_plugin/: __init__.py  version.py
tests/: test_playbook.py
